# PLushie

./: LICENSE  README.md  hie.yaml  plushie.cabal  shell.nix
examples/: peano.lush  recursion.lush  types.lush
src/: Eval.hs  Infra.hs  Main.hs  Parse.hs  Syntax.hs  Typecheck.hs
