name:                plushie
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/plushie#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable plushie
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , containers
    , megaparsec
    , parser-combinators
    , mtl >= 2.3.1
    , prettyprinter
  other-modules:
      Parse
    , Eval
    , Syntax
    , Typecheck
    , Infra
